--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -50,6 +50,7 @@ build() {
 
 package() {
 	cd $_pkgsrcdir
+	pwd
 	echo Generating translation files
 	echo ""
 	cargo run -p transtools -- packfiles
@@ -64,16 +65,14 @@ package() {
 
 	PROGRAM="${BBCYAN}SysD Manager${NC}"
 	echo -e Installing $PROGRAM Proxy  
-
 	install -vDm755 "./target/release/sysd-manager-proxy" -t "$pkgdir/usr/bin"
 	echo -e Executing Install srcipt
 	#/usr/bin/sysd-manager-proxy install
 
-	install -vDm644 "./sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf" -T /usr/share/dbus-1/system.d/io.github.plrigaux.SysDManager.conf
-	sed -i -e s/{BUS_NAME}/io.github.plrigaux.SysDManager/ -e s/{DESTINATION}/io.github.plrigaux.SysDManager/ -e s/{ENVIRONMENT}// -e s/{INTERFACE}/io.github.plrigaux.SysDManager/ /usr/share/dbus-1/system.d/io.github.plrigaux.SysDManager.conf
-	install -vDm644 "./sysd-manager-proxy/data/io.github.plrigaux.SysDManager.policy" -t /usr/share/polkit-1/actions
-	install -vDm644 "./sysd-manager-proxy/data/sysd-manager-proxy.service" -T /usr/lib/systemd/system/sysd-manager-proxy.service
-	sed -i -e s/{BUS_NAME}/io.github.plrigaux.SysDManager/ -e s/{DESTINATION}/io.github.plrigaux.SysDManager/ -e s/{ENVIRONMENT}// -e s/{EXECUTABLE}/\\/usr\\/bin\\/sysd-manager-proxy/ -e s/{INTERFACE}/io.github.plrigaux.SysDManager/ -e s/{SERVICE_ID}/sysd-manager-proxy/ /usr/lib/systemd/system/sysd-manager-proxy.service
-
+	install -vDm644 "./sysd-manager-proxy/data/io.github.plrigaux.SysDManager.conf" -T  "$pkgdir/usr/share/dbus-1/system.d/io.github.plrigaux.SysDManager.conf"
+	sed -i -e s/{BUS_NAME}/io.github.plrigaux.SysDManager/ -e s/{DESTINATION}/io.github.plrigaux.SysDManager/ -e s/{ENVIRONMENT}// -e s/{INTERFACE}/io.github.plrigaux.SysDManager/ "$pkgdir/usr/share/dbus-1/system.d/io.github.plrigaux.SysDManager.conf"
+	install -vDm644 "./sysd-manager-proxy/data/io.github.plrigaux.SysDManager.policy" -t "$pkgdir/usr/share/polkit-1/actions"
+	install -vDm644 "./sysd-manager-proxy/data/sysd-manager-proxy.service" -T "$pkgdir/usr/lib/systemd/system/sysd-manager-proxy.service"
+	sed -i -e s/{BUS_NAME}/io.github.plrigaux.SysDManager/ -e s/{DESTINATION}/io.github.plrigaux.SysDManager/ -e s/{ENVIRONMENT}// -e s/{EXECUTABLE}/\\/usr\\/bin\\/sysd-manager-proxy/ -e s/{INTERFACE}/io.github.plrigaux.SysDManager/ -e s/{SERVICE_ID}/sysd-manager-proxy/ "$pkgdir/usr/lib/systemd/system/sysd-manager-proxy.service"
 	echo -e Installation of $PROGRAM completed, enjoy.
 }
