--- a/sysd-manager-base/Cargo.toml
+++ b/sysd-manager-base/Cargo.toml
@@ -6,6 +6,7 @@ rust-version.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
+description = "Base crate for sysd-manager providing common utilities and types."
 
 [features]
 default = []
