--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -14,6 +14,7 @@ changelog=CHANGELOG.md
 _commit=
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
 _pkgsrcdir=$pkgname-$pkgver
+sha256sums=()
 
 prepare() {
 	cd $_pkgsrcdir
