--- a/sysd-manager-comcontroler/Cargo.toml
+++ b/sysd-manager-comcontroler/Cargo.toml
@@ -22,20 +22,21 @@ enumflags2.workspace = true
 futures-util = "0.3"
 gettext-rs.workspace = true
 glib.workspace = true
+gio.workspace = true
 libc.workspace = true
 log.workspace = true
 regex.workspace = true
 serde.workspace = true
 strum.workspace = true
-sysd = { version = "0.10", package = "systemd" } 
+sysd = { version = "0.10", package = "systemd" }
 tokio.workspace = true
 tokio-util.workspace = true
 tracing-subscriber.workspace = true
 zbus.workspace = true
 zbus_xml = "5"
 zvariant.workspace = true
-zvariant_derive =  "5"
-zvariant_utils =  "3"
+zvariant_derive = "5"
+zvariant_utils = "3"
 
 
 [dev-dependencies]
