--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,11 @@ test-base = { version = "0.1", path = "./sysd-manager-test-base", package = "sys
 tokio-util = "0.7"
 tokio = { version = "1", features = ["full"] }
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["fmt", "chrono"] }
+tracing-subscriber = { version = "0.3", features = [
+  "fmt",
+  "chrono",
+  "env-filter",
+] }
 tracing-journald = "0.3"
 zvariant = "5"
 zbus = { version = "5.11", default-features = false, features = [
