--- a/tiny_daemon/Cargo.toml
+++ b/tiny_daemon/Cargo.toml
@@ -17,9 +17,8 @@ axum = "0.8"
 clap.workspace = true
 env_logger = "0.11"
 libc.workspace = true
-log.workspace = true
 signal-hook = "0.3"
 tokio.workspace = true
-tracing = "0.1"
+tracing.workspace = true
 tracing-subscriber = "0.3"
 tracing-journald = "0.3"
