--- a/transtools/Cargo.toml
+++ b/transtools/Cargo.toml
@@ -10,6 +10,6 @@ repository = { workspace = true }
 [dependencies]
 translating = { package = "sysd-manager-translating", path = "../sysd-manager-translating" }
 clap.workspace = true
-log.workspace = true
+tracing.workspace = true
 dotenv.workspace = true
 tracing-subscriber.workspace = true
