--- a/sysd-manager-proxy/data/sysd-manager-proxy.service
+++ b/sysd-manager-proxy/data/sysd-manager-proxy.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=A proxy to enable SysD Manager features
 After=network.target
+Documentation=https://github.com/plrigaux/sysd-manager/wiki/SysD-Manager-Proxy
 
 [Service]
 SyslogIdentifier={SERVICE_ID}
