--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,7 +22,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gobject-2.0 gobject-2.0-dev libgtk-4-dev libglib2.0-dev glib-2.0 glib-2.0-dev libgtksourceview-5-0 libgtksourceview-5-dev pkg-config
     - name: Set PKG_CONFIG_PATH
-      run: echo "PKG_CONFIG_PATH=/usr/lib/pkgconfig:/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
+      run: |
+        pkg-config --libs --cflags glib-2.0
+        export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig
     - name: Build
       run: cargo build --verbose
     - name: Run tests
