--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,11 +19,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y gobject-2.0 gobject-2.0-dev libgtk-4-dev libglib2.0-dev glib-2.0 glib-2.0-dev libgtksourceview-5-0 libgtksourceview-5-dev pkg-config
-    - name: Verify Installation and Locate the .pc file 
-      run: |
-        pkg-config --variable pc_path pkgconfig
-        pkg-config --modversion glib-2.0      
-    
+    - uses: actions-rust-lang /setup-rust-toolchain@v1     
     - name: Build
       run: cargo build --verbose
     - name: Run tests
